--- a/tinyuml-0.13_02/pom.xml
+++ b/tinyuml-0.13_02/pom.xml
@@ -69,9 +69,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
       <plugin>
@@ -133,8 +134,10 @@
   </build>
   
   <!-- Reporting -->
+  <!--
   <reporting>
     <plugins>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
@@ -154,7 +157,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
         <configuration>
+        -->
           <!-- PMD does not know 1.6 -->
+  <!--
           <targetJdk>1.5</targetJdk>
           <excludes>
             <exclude>**/Edit*Dialog.java</exclude>
@@ -172,21 +177,24 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
+        -->
         <!-- There is a bug in version 1.8, specify 2.0 -->
+  <!--
         <version>2.0</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>javancss-maven-plugin</artifactId>
       </plugin>
+      -->
       <!-- It's not released yet
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changelog-plugin</artifactId>
       </plugin>
-      -->
     </plugins>
   </reporting>
+  -->
   
   <!-- Additional project information -->
   <name>TinyUML</name>
